--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <main>
   <h1 class="tittle">Este es mi examen de Programacion Web 2</h1>
   <p class="parrafo">Profe paseme porfa xd</p>
   <img class="imagen" src="https://pbs.twimg.com/media/EA6omsmUIAAOW7e.jpg" alt="Gatito-llorando">
@@ -15,5 +16,6 @@
     <ol>Con tu espiritu</ol>
   </li>
   <a class="link" href="#">Ándele profe, apruebeme</a>
+</main>
 </body>
 </html>
